--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -23,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".sqlite.TestOpenDb"></activity>
+      
+         
     </application>
 
 </manifest>
