--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".sqlite.TestOpenDb"></activity>
         <activity android:name=".view.MapMeMenu"></activity>
+        <activity android:name=".view.Register"></activity>
+       
        
        
       
