--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -31,7 +31,7 @@
     <!-- End section GCM -->
 
     <application
-        android:name="it.mapyou.gcm.NotificationController"
+        android:name="it.mapyou.network.NotificationServer"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -56,6 +56,7 @@
         </activity>
 
         <!-- ************************************************************** -->
+         <!-- Section Permission GCM requires a Google account. -->
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
@@ -70,6 +71,7 @@
 
         <service android:name="it.mapyou.GCMIntentService" />
         <activity android:name=".gcm.Gcm"></activity>
+        <activity android:name=".view.GcmTest"></activity>
     </application>
 
 </manifest>
