--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -46,7 +46,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="it.mapyou.view.Login"
+            android:name="it.mapyou.view.MapMeLayoutHome"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -61,6 +61,10 @@
         <activity android:name="it.mapyou.view.Register" >
         </activity>
         <activity android:name=".view.Forgot" >
+        </activity>
+         <activity android:name=".view.MapMeSecondTab_User" >
+        </activity>
+         <activity android:name=".view.MapMeFirstTab" >
         </activity>
 
         <!-- ************************************************************** -->
