--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -46,7 +46,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="it.mapyou.view.MapMeLayoutHome"
+            android:name="it.mapyou.view.Login"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -66,6 +66,9 @@
         </activity>
          <activity android:name=".view.MapMeFirstTab" >
         </activity>
+          <activity android:name=".view.MapMeLayoutHome" >
+        </activity>
+       
 
         <!-- ************************************************************** -->
         <!-- Section Permission GCM requires a Google account. -->
