--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
+    <uses-feature
+       android:glEsVersion="0x00020000"
+       android:required="true" />
+    
+    
     <!-- All permission -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -29,8 +34,8 @@
 
     <uses-permission android:name="it.mapyou.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> 
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />     
+    
     <permission
         android:name="it.mapyou.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
@@ -67,6 +72,8 @@
          <activity android:name=".view.MapMeFirstTab" >
        </activity>
     	<activity android:name=".view.MapMeLayoutHome" >
+        </activity>
+        <activity android:name=".view.DashBoardActivity" >
         </activity>
        
 
@@ -108,6 +115,9 @@
         </activity>
         <activity android:name="it.mapyou.view.YourMapMeActivity" >
         </activity>
+         <activity android:name="it.mapyou.view.MapActivity" >
+        </activity>
+        
        
     </application>
 
