--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -117,6 +117,8 @@
         </activity>
          <activity android:name="it.mapyou.view.MapActivity" >
         </activity>
+         <activity android:name="it.mapyou.view.UserOnMapMe" >
+        </activity>
         
        
     </application>
