--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -77,6 +77,8 @@
         </activity>
         <activity android:name=".view.YourMapMeActivity" >
         </activity>
+        <activity android:name=".view.MyMapMe" >
+        </activity>
         
         
        
