--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -79,6 +79,9 @@
         </activity>
         <activity android:name=".view.MyMapMe" >
         </activity>
+         <activity android:name=".view.NotificationActivity" >
+        </activity>
+        
         
         
        
