--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -77,8 +77,6 @@
         </activity>
         <activity android:name=".view.YourMapMeActivity" >
         </activity>
-        <activity android:name=".view.MyMapMe" >
-        </activity>
          <activity android:name=".view.NotificationActivity" >
         </activity>
         
@@ -101,6 +99,7 @@
         </receiver>
 
         <service android:name="it.mapyou.GCMIntentService" />
+        <service android:name="it.mapyou.view.GPSTracker" />
 
         <!-- Google Api Key -->
         <meta-data
