--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -79,6 +79,8 @@
         </activity>
          <activity android:name=".view.NotificationActivity" >
         </activity>
+        <activity android:name=".view.UserOnMapMe" >
+        </activity>
         
         
         
