--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -81,6 +81,12 @@
         </activity>
         <activity android:name=".view.UserOnMapMe" >
         </activity>
+        <activity android:name=".view.CompleteMapMeSecondTab_User" >
+        </activity>
+         <activity android:name=".view.CompleteMapMeFirstTab" >
+       </activity>
+    	<activity android:name=".view.CompleteMapMeLayoutHome" >
+        </activity>
         
         
         
