--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -129,7 +129,8 @@
         
         <activity android:name="it.mapyou.view.NewMapMe" >
         </activity>
-     
+      <activity android:name="it.mapyou.view.NotificationList" >
+        </activity>
          <activity android:name="it.mapyou.view.MapActivity" >
         </activity>
 
