--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -133,6 +133,8 @@
      
          <activity android:name="it.mapyou.view.MapActivity" >
         </activity>
+        <activity android:name="it.mapyou.view.MyLocation" >
+        </activity>
 
     </application>
 
