--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -135,6 +135,7 @@
         </activity>
         <activity android:name="it.mapyou.view.MyLocation" >
         </activity>
+        <activity android:name=".view.ChatUserToUser"></activity>
 
     </application>
 
