--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -136,6 +136,8 @@
         <activity android:name="it.mapyou.view.MyLocation" >
         </activity>
         <activity android:name=".view.ChatUserToUser"></activity>
+        <activity android:name=".view.BroadcastChat"></activity>
+        <activity android:name=".view.ChatHome"></activity>
 
     </application>
 
