--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -47,7 +47,7 @@
     <application
         android:name="it.mapyou.network.NotificationServer"
         android:allowBackup="true"
-        android:icon="@drawable/logooo"
+        android:icon="@drawable/mappp"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
