--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -97,6 +97,8 @@
         </activity>
         <activity android:name="it.mapyou.view.MyLocation" >
         </activity>
+         <activity android:name="it.mapyou.view.SettingsMapMe" >
+        </activity>
         <activity android:name=".view.ChatUserToUser"></activity>
         <activity android:name=".view.BroadcastChat"></activity>
         <activity android:name=".view.ChatHome"></activity>
