--- a/Project/workspace/MapYou/AndroidManifest.xml
+++ b/Project/workspace/MapYou/AndroidManifest.xml
@@ -45,7 +45,7 @@
     <!-- End section GCM -->
 
     <application
-        android:name="it.mapyou.network.NotificationServer"
+        android:name="it.mapyou.controller.network.NotificationServer"
         android:allowBackup="true"
         android:icon="@drawable/mappp"
         android:label="@string/app_name"
